Tue Nov 18 09:52:33 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3299_Regression/server.cpp:
          Layout change

        * tests/Bug_933_Regression/MessengerClient.cpp:
        * tests/Bug_933_Regression/MessengerServer.cpp:
          Add support for commandline arguments to specify the IOR files

Mon Nov 17 21:26:33 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * TAO_IDL/tao_idl.mpc:

          s/gperf/ace_gperf/  It was renamed a while ago but this file
          wasn't changed.

Mon Nov 17 18:44:15 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * tao/PolicyS.h:

          Add a #include of tao/PortabServer/PolicyS.h.

        * tests/Bug_3513_Regression/test.cpp:

          Whitespace.

        * tests/Bug_3514_Regression:
        * tests/Bug_3514_Regression/Bug_3514_Regression.mpc:
        * tests/Bug_3514_Regression/README:
        * tests/Bug_3514_Regression/test.idl:
        * tests/Bug_3514_Regression/test.cpp:

          Regression test for the above fix.

Mon Nov 17 18:01:17 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * TAO_IDL/util/utl_global.cpp:

          Change order that #includes are output into generated headers. Emit
          them in the order that they are found in the pre-processor output
          rather than the order that they are found in the initial file scan.

          This fixes bug #3513.

        * tests/Bug_3513_Regression:
        * tests/Bug_3513_Regression/Bug_3513_Regression.mpc:
        * tests/Bug_3513_Regression/README:
        * tests/Bug_3513_Regression/test.idl:
        * tests/Bug_3513_Regression/test.cpp:

          Compile only test for the above bug.

Mon Nov 17 14:20:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/Bug_3499_Regression/DLL_Service_Host.cpp:
          Use ACE_throw_bad_alloc instead of manually calling
          ACE_bad_alloc () as MFC builds redefine the call appropriatly.
