@@ -23,7 +23,7 @@ int ACE_TMAIN (int argc, ACE_TCHAR *argv[])
     // Use the first argument to create the factory object reference,
     // in real applications we use the naming service, but let's do
     // the easy part first!
-    CORBA::Object_var factory_object = orb->string_to_object (ACE_TEXT_ALWAYS_CHAR (argv[1]));
+    CORBA::Object_var factory_object = orb->string_to_object (argv[1]);
 
     // Now downcast the object reference to the appropriate type
     Quoter::Stock_Factory_var factory = Quoter::Stock_Factory::_narrow (factory_object.in ());
